@@ -179,30 +179,35 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
         }
         this.info.sync=getLocalStorageBool("syncInfo", true);
         bus.$on('playerStatus', function(playerStatus) {
-            // Has cover changed?
-            if (playerStatus.playlist.count == 0) {
-                if (undefined===this.coverFromInfo || this.coverFromInfo) {
-                    this.cover=resolveImage("music/0/cover");
-                    this.coverFromInfo = false;
-                }
-            } else if (playerStatus.current.artwork_url!=this.playerStatus.current.artwork_url ||
-                playerStatus.current.coverid!=this.playerStatus.current.coverid ||
-                this.coverFromPlayer!=this.$store.state.player.id) {
-                this.playerStatus.current.artwork_url = playerStatus.current.artwork_url;
-                this.playerStatus.current.coverid = playerStatus.current.coverid;
-                this.coverFromPlayer = this.$store.state.player.id
+            var coverUrl;
 
-                this.cover = undefined;
-                if (this.playerStatus.current.artwork_url) {
-                    this.cover=resolveImage(null, this.playerStatus.current.artwork_url);
+            if (playerStatus.playlist.count == 0) {
+                coverUrl=resolveImage("music/0/cover");
+            } else {
+                // Use players current cover as cover image. Need to add extra (coverid, etc) params so that
+                // the URL is different between tracks...
+                coverUrl = lmsServerAddress+"/music/current/cover.jpg?player=" + this.$store.state.player.id;
+                if (playerStatus.current.coverid) {
+                    coverUrl+="&coverid="+playerStatus.current.coverid;
+                } else {
+                    if (playerStatus.current.album_id) {
+                        coverUrl+="&album_id="+playerStatus.current.album_id;
+                    } else {
+                        if (playerStatus.current.album) {
+                            coverUrl+="&album="+encodeURIComponent(playerStatus.current.album);
+                        }
+                        if (playerStatus.current.albumartist) {
+                            coverUrl+="&artist="+encodeURIComponent(playerStatus.current.albumartist);
+                        }
+                        if (playerStatus.current.year && playerStatus.current.year>0) {
+                            coverUrl+="&year="+playerStatus.current.year;
+                        }
+                    }
                 }
-                if (undefined==this.cover && this.playerStatus.current.coverid) {
-                    this.cover=lmsServerAddress+"/music/"+this.playerStatus.current.coverid+"/cover.jpg";
-                }
-                if (undefined==this.cover) {
-                    this.cover=lmsServerAddress+"/music/current/cover.jpg?player=" + this.$store.state.player.id;
-                }
-                this.coverFromInfo = true;
+            }
+
+            if (this.cover!=coverUrl) {
+                this.cover = coverUrl;
             }
 
             var playStateChanged = false;
