@@ -13,6 +13,7 @@
  9. Remove option to sort favourites, instead allow drag'n'drop re-ordering.
 10. Don't allow pining of favourites  - their IDs seem to change too, and
     why pin a favourite directly?
+11. Always use player's current cover image for now playing.
 
 0.2.0
 -----
